<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shuo.shippingratecalculator2.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <GridLayout
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/gridLayout1"
                android:columnCount="3"
                android:rowCount="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:src="@drawable/burger"></ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:text="BUILD-A-BURGER"/>
                </GridLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Bun Selection"
                android:textSize="15dp"/>
            <Spinner
                android:id="@+id/bunSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bun_list"
                android:prompt="@string/bun_prompt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Meat Selection"
                android:textSize="15dp"/>
            <Spinner
                android:id="@+id/meatSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/meat_list"
                android:prompt="@string/meat_prompt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Pick your Toppings"
                android:textSize="15dp"/>
            <GridLayout
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/gridLayout"
                android:columnCount="2"
                android:rowCount="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkMushrooms"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/mushrooms"/>
                <CheckBox
                    android:id="@+id/checkLettuce"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/lettuce"/>
                <CheckBox
                    android:id="@+id/checkTomato"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/tomato"/>
                <CheckBox
                    android:id="@+id/checkPickles"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/pickles"/>
                <CheckBox
                    android:id="@+id/checkMayo"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/mayo"/>
                <CheckBox
                    android:id="@+id/checkMustard"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/mustard"/>
            </GridLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Enter the number of Burgers:"
                android:textSize="15dp"/>
            <EditText
                android:id="@+id/numberOfBurgers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Calculate"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/calculate"/>
        </LinearLayout>
    </ScrollView>




</RelativeLayout>
